@@ -263,6 +263,7 @@ register.caption.displayname=Vist navn
 register.caption.email=Email
 register.caption.firstname=First name
 register.caption.lastname=Last name (surname)
+register.caption.locale=Preferred country & language
 register.caption.newpassword=Nyt kodeord
 register.caption.oldpassword=Gammelt kodeord
 register.error.logininvalid=Login navnet {0} er allerede i brug. V\u00E6lg venligst et andet login navn.
