@@ -263,6 +263,7 @@ register.caption.displayname=Angezeigter Name
 register.caption.email=Email
 register.caption.firstname=Vorname
 register.caption.lastname=Nachname
+register.caption.locale=Preferred country & language
 register.caption.newpassword=Neues Passwort
 register.caption.oldpassword=Altes Passwort
 register.error.logininvalid=Die Benutzer-ID login {0} wird schon benutzt. Bitte w\u00E4hlen Sie eine andere ID.
