@@ -263,6 +263,7 @@ register.caption.displayname=Display Name
 register.caption.email=Email
 register.caption.firstname=First name
 register.caption.lastname=Last name (surname)
+register.caption.locale=Preferred country & language
 register.caption.newpassword=Nueva contrase\u00F1a
 register.caption.oldpassword=Contrase\u00F1a antigua
 register.error.logininvalid=The login {0} is already in use.  Please choose another.
