@@ -263,6 +263,7 @@ register.caption.displayname=Megjelen\u00EDtett n\u00E9v
 register.caption.email=E-mail
 register.caption.firstname=First name
 register.caption.lastname=Last name (surname)
+register.caption.locale=Preferred country & language
 register.caption.newpassword=\u00DAj jelsz\u00F3
 register.caption.oldpassword=R\u00E9gi jelsz\u00F3
 register.error.logininvalid=The login {0} is already in use.  Please choose another.
