@@ -263,6 +263,7 @@ register.caption.displayname=Weergegeven naam
 register.caption.email=E-mail
 register.caption.firstname=Voornaam
 register.caption.lastname=Achternaam
+register.caption.locale=Preferred country & language
 register.caption.newpassword=Nieuw wachtwoord
 register.caption.oldpassword=Oud wachtwoord
 register.error.logininvalid=De gebruikersnaam {0} bestaat reeds. Gelieve een andere gebruikersnaam te kiezen.
