@@ -263,6 +263,7 @@ register.caption.displayname=\u663E\u793A\u540D\u79F0
 register.caption.email=\u7535\u5B50\u90AE\u4EF6
 register.caption.firstname=\u540D
 register.caption.lastname=\u59D3
+register.caption.locale=Preferred country & language
 register.caption.newpassword=\u65B0\u5BC6\u7801
 register.caption.oldpassword=\u65E7\u5BC6\u7801
 register.error.logininvalid=\u7528\u6237{0}\u6B63\u5728\u4F7F\u7528\uFF0C\u8BF7\u5207\u6362\u5230\u5176\u4ED6\u7528\u6237\u3002
