@@ -67,6 +67,7 @@ STATEMENT_CREATE_WIKI_USER_TABLE = \
       last_login_ip_address VARCHAR(15) NOT NULL, \
       is_admin INTEGER DEFAULT 0 NOT NULL, \
       remember_key VARCHAR(100) NOT NULL, \
+      default_locale VARCHAR(8), \
       CONSTRAINT jam_pk_wiki_user PRIMARY KEY (wiki_user_id) \
     )
 STATEMENT_CREATE_WIKI_USER_INFO_TABLE = \
